Apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: it-tools
  name: it-tools
  namespace: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - image: ghcr.io/corentinth/it-tools:latest
          name: it-tools
      restartPolicy: Always
